_archive/content-services/5.0/concepts/alfresco-sdk-upgrading-alfresco-version.md
---
author: Alfresco Documentation
---

# Upgrading Alfresco version for an extension project

When you have been working with your extension project for a while it is highly likely that there have been some new releases of the Alfresco software. These releases will have new functionality that you might want to take advantage of in your project. It might also be that you are starting to work with this SDK version a while after it has been released, and latest Alfresco version is now newer than what is default in the SDK. This section will walk through how you can upgrade your SDK project to use the newest Alfresco version.

These instructions include information about how to upgrade projects generated from each one of the artifacts. Make sure you are following upgrade instructions for the correct "From version -\> To version".

**Important:** Make sure you have made a complete backup of your project before you start the upgrade process!

-   **[Upgrading SDK 2.1.1 projects from Enterprise 5.0.1 to 5.0.2](../tasks/alfresco-sdk-upgrading-alfresco-version-SDK-211-501-to-502.md)**  
These instructions will walk through what is needed when upgrading an SDK 2.1.1 project from using Alfresco Enterprise version 5.0.1 to using Enterprise version 5.0.2.
-   **[Upgrading SDK 2.1.1 projects from Enterprise 5.0.1 \(or 5.0.2\) to 5.0.3](../tasks/alfresco-sdk-upgrading-alfresco-version-SDK-211-501-or-502-to-503.md)**  
These instructions will walk through what is needed when upgrading an SDK 2.1.1 project from using Alfresco Enterprise version 5.0.1 \(or 5.0.2\) to using Enterprise version 5.0.3. There are a couple of changes in the 5.0.3 code base, such as new database scripts, that are not automatically handled by SDK 2.1.1. There is also a problem running with Spring Loaded because of some new security checks in the repository layer.

**Parent topic:**[Upgrading](../concepts/alfresco-sdk-upgrading.md)

